--- a/shop.html
+++ b/shop.html
@@ -4,26 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cara Shop</title>
+	<title>Shop</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
 </head>
 <body>
-
-
-	<!--  ======= Header Section/Seção do cabeçalho =======  -->
-	<section id="header">
-		<a href="#"><img src="img/logo.png" class="logo" alt=""></a>
-		<div class="">
-			<ul id="navbar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="shop.html">Shop</a></li>
-				<li><a href="blogs.html">Blogs</a></li>
-				<li><a href="about.html">Sobre</a></li>
-				<li><a href="contact.html">Contato</a></li>
-			</ul>
-		</div>
-	</section>
 
 
 
