--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Cara Shop</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico"/>
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
 </head>
 <body>
 
@@ -21,6 +22,7 @@
 				<li><a href="blogs.html">Blogs</a></li>
 				<li><a href="about.html">Sobre</a></li>
 				<li><a href="contact.html">Contato</a></li>
+				<li><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
 			</ul>
 		</div>
 	</section>
