--- a/about.html
+++ b/about.html
@@ -11,7 +11,20 @@
 <body>
 
 
-
+	<!--  ======= Header Section/Seção do cabeçalho =======  -->
+	<section id="header">
+		<a href="#"><img src="img/logo.png" class="logo" alt=""></a>
+		<div class="">
+			<ul id="navbar">
+				<li><a href="index.html" class="active">Home</a></li>
+				<li><a href="shop.html">Shop</a></li>
+				<li><a href="blogs.html">Blogs</a></li>
+				<li><a href="about.html">Sobre</a></li>
+				<li><a href="contact.html">Contato</a></li>
+				<li><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+			</ul>
+		</div>
+	</section>
 
 
 
