--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
 		</div>
 	</section>
 
-
-
+	<!-- Hero Section/Seção hero -->
+	<section id="hero">
+		<h4>Oferta de troca</h4>
+		<h2>Ofertas de super valor</h2>
+		<h1>Em todos os produtos</h1>
+		<p>Economize mais com cupons e até 70% de desconto!</p>
+	</section>
 
 
 
