--- a/shop.html
+++ b/shop.html
@@ -15,8 +15,8 @@
 		<a href="#"><img src="img/logo.png" class="logo" alt=""></a>
 		<div class="">
 			<ul id="navbar">
-				<li><a href="index.html" class="active">Home</a></li>
-				<li><a href="shop.html">Shop</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="shop.html" class="active">Shop</a></li>
 				<li><a href="blogs.html">Blogs</a></li>
 				<li><a href="about.html">Sobre</a></li>
 				<li><a href="contact.html">Contato</a></li>
