--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
 		<button>Compre agora</button>
 	</section>
 
-
-
+	<!-- ======= Featured Section/Seção em destaque ======= -->
+	<section id="featured" class="section-p1">
+		<div class="fe-box">
+			<img src="img/features/f1.png" alt="">
+			<h6>Envio Grátis</h6>
+		</div>
+	</section>
 	
 	<script src="js/script.js"></script>
 </body>
