--- a/index.html
+++ b/index.html
@@ -42,6 +42,26 @@
 			<img src="img/features/f1.png" alt="">
 			<h6>Envio Grátis</h6>
 		</div>
+		<div class="fe-box">
+			<img src="img/features/f2.png" alt="">
+			<h6>Pedido Online</h6>
+		</div>
+		<div class="fe-box">
+			<img src="img/features/f3.png" alt="">
+			<h6>Economizar</h6>
+		</div>
+		<div class="fe-box">
+			<img src="img/features/f4.png" alt="">
+			<h6>Promoções</h6>
+		</div>
+		<div class="fe-box">
+			<img src="img/features/f5.png" alt="">
+			<h6>Venda Feliz</h6>
+		</div>
+		<div class="fe-box">
+			<img src="img/features/f6.png" alt="">
+			<h6>Suporte 24h</h6>
+		</div>
 	</section>
 	
 	<script src="js/script.js"></script>
