--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		</div>
 	</section>
 
+
 	<!-- ======= Home Page Section/Seção da página inicial ======= -->
 	<section id="hero">
 		<h4>Oferta de troca</h4>
@@ -35,6 +36,7 @@
 		<p>Economize mais com cupons e até 70% de desconto!</p>
 		<button>Compre agora</button>
 	</section>
+
 
 	<!-- ======= Featured Section/Seção em destaque ======= -->
 	<section id="featured" class="section-p1">
@@ -63,6 +65,37 @@
 			<h6>Suporte 24h</h6>
 		</div>
 	</section>
+
+
+	<!-- ======= Products Section/Seção de produtos ======= -->
+	<section id="product1" class="section-p1">
+		<h2>Produtos em Destaque</h2>
+		<p>Coleção de verão novo design moderno</p>
+		<div class="pro-container">
+			<div class="pro">
+				<img src="img/products/f1.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$78.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart"></i></a>
+			</div>
+		</div>
+	</section>
+
+
+
+
+
+
 	
 	<script src="js/script.js"></script>
 </body>
