--- a/index.html
+++ b/index.html
@@ -82,11 +82,123 @@
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
+						<i class="far fa-star"></i>
+					</div>
+					<h4>$78.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/f2.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half"></i>
+					</div>
+					<h4>$58.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/f3.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$92.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/f4.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$88.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/f5.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$100.00</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/f6.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$130.00</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/f7.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$75.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/f8.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
 					</div>
 					<h4>$78.99</h4>
 				</div>
-				<a href="#"> <i class="fal fa-shopping-cart"></i></a>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
 			</div>
 		</div>
 	</section>
