--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			<div class="pro">
 				<img src="img/products/f2.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<span>Quiksilver</span>
+					<h5>Quiksilver On The Hunt</h5> 	
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -107,8 +107,8 @@
 			<div class="pro">
 				<img src="img/products/f3.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<span>Hurley</span>
+					<h5>Hurley Eletric Dark</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -123,8 +123,8 @@
 			<div class="pro">
 				<img src="img/products/f4.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<span>Qix</span>
+					<h5>Qix Basic Skateboards</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -139,8 +139,8 @@
 			<div class="pro">
 				<img src="img/products/f5.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<span>Volcom</span>
+					<h5>Volcom Wieight Grafite</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -155,8 +155,8 @@
 			<div class="pro">
 				<img src="img/products/f6.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<span>Vans</span>
+					<h5>Vans Flow Rina</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -172,7 +172,7 @@
 				<img src="img/products/f7.jpg" alt="">
 				<div class="des">
 					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<h5>Adidas Single Jersey 3-Stripes</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -187,8 +187,8 @@
 			<div class="pro">
 				<img src="img/products/f8.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<span>Element</span>
+					<h5>Element Feminina Love World</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
