--- a/index.html
+++ b/index.html
@@ -204,6 +204,13 @@
 	</section>
 
 
+	<!-- ======= Banner Section/Seção de banner ======= -->
+	<section id="banner" class="section-m1">
+		<h4>Serviços de reparo</h4>
+		<h2>Até <span>70%</span> de desconto em todas as camisetas e acessórios</h2>
+		<button>Explore mais</button>
+	</section>
+
 
 
 
