Products section two

--- a/index.html
+++ b/index.html
@@ -208,10 +208,145 @@
 	<section id="banner" class="section-m1">
 		<h4>Serviços de reparo</h4>
 		<h2>Até <span>70%</span> de desconto em todas as camisetas e acessórios</h2>
-		<button>Explore mais</button>
+		<button class="normal">Explore mais</button>
 	</section>
 
 
+	<!-- ======= Products Section 2/Seção de produtos  2 ======= -->
+	<section id="product1" class="section-p1">
+		<h2>Novas chegadas</h2>
+		<p>Coleção de verão novo design moderno</p>
+		<div class="pro-container">
+			<div class="pro">
+				<img src="img/products/n1.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Cartoon Astronaut T-Shirts</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="far fa-star"></i>
+					</div>
+					<h4>$78.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/n2.jpg" alt="">
+				<div class="des">
+					<span>Quiksilver</span>
+					<h5>Quiksilver On The Hunt</h5> 	
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star-half"></i>
+					</div>
+					<h4>$58.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/n3.jpg" alt="">
+				<div class="des">
+					<span>Hurley</span>
+					<h5>Hurley Eletric Dark</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$92.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/n4.jpg" alt="">
+				<div class="des">
+					<span>Qix</span>
+					<h5>Qix Basic Skateboards</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$88.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/n5.jpg" alt="">
+				<div class="des">
+					<span>Volcom</span>
+					<h5>Volcom Wieight Grafite</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$100.00</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/n6.jpg" alt="">
+				<div class="des">
+					<span>Vans</span>
+					<h5>Vans Flow Rina</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$130.00</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/n7.jpg" alt="">
+				<div class="des">
+					<span>Adidas</span>
+					<h5>Adidas Single Jersey 3-Stripes</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$75.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+			<div class="pro">
+				<img src="img/products/n8.jpg" alt="">
+				<div class="des">
+					<span>Element</span>
+					<h5>Element Feminina Love World</h5>
+					<div class="star">
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+					</div>
+					<h4>$78.99</h4>
+				</div>
+				<a href="#"> <i class="fal fa-shopping-cart cart"></i></a>
+			</div>
+		</div>
+	</section>
 
 
 
