--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 			<div class="pro">
 				<img src="img/products/n1.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Cartoon Astronaut T-Shirts</h5>
+					<span>Dgk</span>
+					<h5>Dgk Geisha All</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -236,8 +236,8 @@
 			<div class="pro">
 				<img src="img/products/n2.jpg" alt="">
 				<div class="des">
-					<span>Quiksilver</span>
-					<h5>Quiksilver On The Hunt</h5> 	
+					<span>Etnies</span>
+					<h5>Streetwear Etnies</h5> 	
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -252,8 +252,8 @@
 			<div class="pro">
 				<img src="img/products/n3.jpg" alt="">
 				<div class="des">
-					<span>Hurley</span>
-					<h5>Hurley Eletric Dark</h5>
+					<span>Grizzly</span>
+					<h5>Grizzly Snake Eyes Bear Ss Tee</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -268,8 +268,8 @@
 			<div class="pro">
 				<img src="img/products/n4.jpg" alt="">
 				<div class="des">
-					<span>Qix</span>
-					<h5>Qix Basic Skateboards</h5>
+					<span>Emerica</span>
+					<h5>Emerica Classic Combo</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -284,8 +284,8 @@
 			<div class="pro">
 				<img src="img/products/n5.jpg" alt="">
 				<div class="des">
-					<span>Volcom</span>
-					<h5>Volcom Wieight Grafite</h5>
+					<span>Toy Machine</span>
+					<h5>Toy Wieight Grafite</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -301,7 +301,7 @@
 				<img src="img/products/n6.jpg" alt="">
 				<div class="des">
 					<span>Vans</span>
-					<h5>Vans Flow Rina</h5>
+					<h5>Vans Off The Wall</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -316,8 +316,8 @@
 			<div class="pro">
 				<img src="img/products/n7.jpg" alt="">
 				<div class="des">
-					<span>Adidas</span>
-					<h5>Adidas Single Jersey 3-Stripes</h5>
+					<span>DS</span>
+					<h5>DS Skateboards logo</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
@@ -332,8 +332,8 @@
 			<div class="pro">
 				<img src="img/products/n8.jpg" alt="">
 				<div class="des">
-					<span>Element</span>
-					<h5>Element Feminina Love World</h5>
+					<span>Zero</span>
+					<h5>Zero Skateboards Dying to Live</h5>
 					<div class="star">
 						<i class="fas fa-star"></i>
 						<i class="fas fa-star"></i>
