--- a/index.html
+++ b/index.html
@@ -349,6 +349,16 @@
 	</section>
 
 
+	<!-- ======= Banner Section 2/Seção de banner 2 ======= -->
+	<section id="sm-banner" class="section-p1">
+		<div class="banner-box">
+			<h4>Ofertas Malucas</h4>
+			<h2>Compre 1 leve 1 de graça</h2>
+			<span>O melhor vestido clássico está à venda na cara</span>
+			<button class="normal">Saber mais</button>
+		</div>	
+	</section>
+
 
 	
 	<script src="js/script.js"></script>
