Update banner two

--- a/index.html
+++ b/index.html
@@ -355,7 +355,13 @@
 			<h4>Ofertas Malucas</h4>
 			<h2>Compre 1 leve 1 de graça</h2>
 			<span>O melhor vestido clássico está à venda na cara</span>
-			<button class="normal">Saber mais</button>
+			<button class="white">Saber mais</button>
+		</div>
+		<div class="banner-box">
+			<h4>Ofertas Malucas</h4>
+			<h2>Compre 1 leve 1 de graça</h2>
+			<span>O melhor vestido clássico está à venda na cara</span>
+			<button class="white">Saber mais</button>
 		</div>	
 	</section>
 
