--- a/index.html
+++ b/index.html
@@ -357,13 +357,26 @@
 			<span>O melhor vestido clássico está à venda na cara</span>
 			<button class="white">Saber mais</button>
 		</div>
-		<div class="banner-box">
-			<h4>Ofertas Malucas</h4>
-			<h2>Compre 1 leve 1 de graça</h2>
+		<div class="banner-box banner-box2">
+			<h4>Primavera Verão</h4>
+			<h2>Próxima temporada</h2>
 			<span>O melhor vestido clássico está à venda na cara</span>
-			<button class="white">Saber mais</button>
+			<button class="white">Coleção</button>
 		</div>	
 	</section>
+
+	<!-- ======= Banner Section 3/Seção de banner 3 ======= -->
+	<section id="banner3">
+		<div class="banner-box">
+			<h2>Venda Sazonal</h2>
+			<h3>Coleção de inverno -50% de desconto</h3>
+		</div>
+	</section>
+
+
+
+
+
 
 
 	
