--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 	<!-- ======= Products Section 2/Seção de produtos  2 ======= -->
 	<section id="product1" class="section-p1">
-		<h2>Novas chegadas</h2>
+		<h2>Novas Chegadas</h2>
 		<p>Coleção de verão novo design moderno</p>
 		<div class="pro-container">
 			<div class="pro">
@@ -368,8 +368,16 @@
 	<!-- ======= Banner Section 3/Seção de banner 3 ======= -->
 	<section id="banner3">
 		<div class="banner-box">
-			<h2>Venda Sazonal</h2>
+			<h2>VENDA SAZONAL</h2>
 			<h3>Coleção de inverno -50% de desconto</h3>
+		</div>
+		<div class="banner-box banner-box2">
+			<h2>NOVA COLEÇÃO DE CALÇADOS</h2>
+			<h3>Primavera verão 2022</h3>
+		</div>
+		<div class="banner-box banner-box3">
+			<h2>CAMISETAS</h2>
+			<h3>Novas estampas da moda</h3>
 		</div>
 	</section>
 
