--- a/index.html
+++ b/index.html
@@ -382,7 +382,17 @@
 	</section>
 
 
-
+	<!-- ======= Newsletters Section /Seção de boletins informativos ======= -->
+	<section id="newsletter" class="section-p1 section-m1">
+		<div class="newstext">
+			<h4>Inscreva-se no Boletim Informativo</h4>
+			<p>Receba atualizações por e-mail sobre nossa loja mais recente e <span>ofertas especiais</span></p>
+		</div>
+		<div class="form">
+			<input type="text" placeholder="Digite o seu e-mail">
+			<button>Inscrever-se</button>
+		</div>
+	</section>
 
 
 
