--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 		</div>
 		<div class="form">
 			<input type="text" placeholder="Digite o seu e-mail">
-			<button>Inscrever-se</button>
+			<button class="normal">Inscrever-se</button>
 		</div>
 	</section>
 
