--- a/index.html
+++ b/index.html
@@ -395,6 +395,39 @@
 	</section>
 
 
+	<!-- ======= Footer Section /Seção de Rodapé ======= -->
+	<footer class="section-p1">
+		<div class="col">
+			<img src="img/logo.png" alt="">
+			<h4>Contato</h4>
+			<p><strong>Endereço:</strong> Av. Noel Nutels, 222 cj Cidade Nova I, Manaus - Am</p>
+			<p><strong>Telefone:</strong> (92)99221-5201 - (92)99221-5202</p>
+			<p><strong>Horas:</strong> 10:00 - 18:00, Seg - Sáb</p>
+			<div class="follow">
+				<h4>Siga-nos</h4>
+				<div class="icons">
+					<i class="fab fa-facebook-f"></i>
+					<i class="fab fa-twitter"></i>
+					<i class="fab fa-instagram"></i>
+					<i class="fab fa-pinterest-p"></i>
+					<i class="fab fa-youtube"></i>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 	
