--- a/index.html
+++ b/index.html
@@ -414,6 +414,30 @@
 				</div>
 			</div>
 		</div>
+		<div class="col">
+			<h4>Sobre</h4>
+			<a href="about.html">Sobre Nós</a>
+			<a href="#">Informação de Entrega</a>
+			<a href="#">Política de Privacidade</a>
+			<a href="#">Termos e Condições</a>
+			<a href="contact.html">Contate-Nos</a>
+		</div>
+		<div class="col">
+			<h4>Minha Conta</h4>
+			<a href="#">Entrar</a>
+			<a href="#">Ver Carrinho</a>
+			<a href="#">Minha Lista de Desejos</a>
+			<a href="#">Acompanhar o Meu Pedido</a>
+			<a href="#">Ajuda</a>
+		</div>
+		<div class="col install">
+			<h4>Instalar Aplicativo</h4>
+			<p>Da App Store ou Google Play</p>
+			<div class="row">
+				<img src="img/pay/app.jpg" alt="">
+				<img src="img/pay/play.jpg" alt="">
+			</div>
+		</div>
 	</footer>
 
 
