Footer section update

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 	<!-- ======= Footer Section /Seção de Rodapé ======= -->
 	<footer class="section-p1">
 		<div class="col">
-			<img src="img/logo.png" alt="">
+			<img class="logo" src="img/logo.png" alt="">
 			<h4>Contato</h4>
 			<p><strong>Endereço:</strong> Av. Noel Nutels, 222 cj Cidade Nova I, Manaus - Am</p>
 			<p><strong>Telefone:</strong> (92)99221-5201 - (92)99221-5202</p>
@@ -437,6 +437,11 @@
 				<img src="img/pay/app.jpg" alt="">
 				<img src="img/pay/play.jpg" alt="">
 			</div>
+			<p>Gateways de Pagamento Protegidos</p>
+			<img src="img/pay/pay.png" alt="">
+		</div>
+		<div class="copyright">
+			<p>Criado Por <span>Daniel Oliveira</span> | Todos os Direitos Reservados!</p>
 		</div>
 	</footer>
 
