--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 				<li><a href="about.html">Sobre</a></li>
 				<li><a href="contact.html">Contato</a></li>
 				<li><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+				<a href="#" id="close"><i class="far fa-times"></i></a>
 			</ul>
+		</div>
+		<div id="mobile">
+			<a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+			<i id="bar" class="fas fa-outdent"></i>
 		</div>
 	</section>
 
