--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<li><a href="blogs.html">Blogs</a></li>
 				<li><a href="about.html">Sobre</a></li>
 				<li><a href="contact.html">Contato</a></li>
-				<li><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+				<li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
 				<a href="#" id="close"><i class="far fa-times"></i></a>
 			</ul>
 		</div>
